Used CSS to fix card formatting and alignment

--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,4 +1,7 @@
 .movies {
     display : flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: .5em;
+    row-gap: 10px;
 }
